-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.3
-
8d6150d54 (6.9.3), bd324d2f2 (tqtc/lts-6.8)
-
DaVinci 125
The Qt 6.9 branch contains lupdate code that uses the deprecated LLVM FileManager::getFile() method, which was removed in LLVM 21. This causes compilation failures when building lupdate with LLVM 21.
native/6.9.3/sources/qttools-6.9.3/src/linguist/lupdate/cpp_clang.cpp
agent:2025/09/19 04:19:03 build.go:413: | In file included from /home/qt/work/build/build/tmp/work/x86_64-linux/qttools-native/6.9.3/sources/qttools-6.9.3/src/linguist/lupdate/cpp_clang.cpp:4:
agent:2025/09/19 04:19:03 build.go:413: | /home/qt/work/build/build/tmp/work/x86_64-linux/qttools-native/6.9.3/sources/qttools-6.9.3/src/linguist/lupdate/cpp_clang.h: In member function ‘clang::SourceLocation TranslationRelatedStore::callLocation(const clang::SourceManager&)’:
agent:2025/09/19 04:19:03 build.go:413: | /home/qt/work/build/build/tmp/work/x86_64-linux/qttools-native/6.9.3/sources/qttools-6.9.3/src/linguist/lupdate/cpp_clang.h:154:18: error: ‘class clang::FileManager’ has no member named ‘getFile’; did you mean ‘getFileRef’?
agent:2025/09/19 04:19:03 build.go:413: | 154 | .getFile(lupdateLocationFile.toStdString());
agent:2025/09/19 04:19:03 build.go:413: | | ^~~~~~~
agent:2025/09/19 04:19:03 build.go:413: | | getFileRef
agent:2025/09/19 04:19:03 build.go:413: | ninja: build stopped: subcommand failed.
agent:2025/09/19 04:19:03 build.go:413: |
agent:2025/09/19 04:19:03 build.go:413: | WARNING: exit code 1 from a shell command.
- resulted from
-
QTBUG-139407 QDoc fails to build with LLVM >= 21
-
- Closed
-
For Gerrit Dashboard: QTBUG-140378 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
677283,5 | lupdate: Fix LLVM 21 compatibility eliminate warnings | 6.9.3 | qt/qttools | Status: MERGED | +2 | 0 |
677366,2 | lupdate: Fix LLVM 21 compatibility eliminate warnings | tqtc/lts-6.8 | qt/tqtc-qttools | Status: MERGED | +2 | 0 |