lupdate: Fix LLVM 21 compatibility eliminate warnings

`FileManager::getFile()` was removed in LLVM 21 in favor of
`getFileRef()`. This causes compilation failures in lupdate.

This change implements a three-tier compatibility strategy using
version-conditional compilation:

- LLVM 21+: Use `getFileRef()` which returns
  `llvm::Expected<FileEntryRef>`.
- LLVM 16-20: Use `getOptionalFileRef()` to eliminate deprecation
  warnings.

If lupdate is built against LLVM <16, we retain the original code for
backward compatibility.

The fix includes early continue statements when file retrieval fails.
This ensures consistent error handling across all API versions. The
newer APIs require converting the `FileEntry` reference to a pointer,
which is expected by `translateFileLineCol()`.

This eliminates deprecation warnings and maintains full backward
compatibility. It also ensures successful compilation with LLVM 21.

Pick-to: 6.9 6.8
Fixes: QTBUG-140378
Change-Id: If290efa98cb0c9ef4d20f39913049a3bb5e1d043
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>